<resources>
    <string name="app_name">一点</string>
    <string name="read">已读</string>
    <string name="like">收藏</string>
    <string name="liked">已收藏</string>
    <string name="realLike">点赞</string>
    <string name="comment">评论</string>
    <string name="search">搜索</string>
    <string name="rank">热榜</string>
    <string name="share">分享</string>
    <string name="hint_user">请输入用户名</string>
    <string name="hint_paw">请输入密码</string>
    <string name="hint_phone">请输入手机号</string>
    <string name="hint_code">请输入验证码</string>
    <string name="login">登录</string>
    <string name="myregister">注册</string>
    <string name="register">没有账号？注册一下吧！</string>
    <string name="randomreading">随机阅读</string>
    <string name="randomknowledge">随机阅读</string>
    <string name="title">SCP-CN-1559</string>
    <string name="author">网络|developer</string>
    <string name="sampleknowledge">
        "特殊收容措施：现时依旧不清楚SCP-CN-1559的真实形态或存在形式。由于项目从未表现出任何已知的异常性质，目前推断SCP-CN-1559早已失去异常性质或不具有威胁性的异常性质。由于与SCP-CN-1559及对应的异学会档案“异学九十九”相应的实体仍未找到，目前关于这一异常的更多性质仍然在持续研究中；在研究结束之前，该档案将不会被从基金会数据库中移除。

描述：SCP-CN-1559是一仅出现于中国古代文献记述中的实体，该实体具有高空飞行或星间穿越的能力。在文献中SCP-CN-1559往往被记述为中华文明传说中的动物“青鸟”。

有关SCP-CN-1559的目击记录零散存在于先秦时代的出土和传世文献中，已知最早的直接文献记述发现于西周成王时期的青铜器铭文中，而根据对数块被认为与天文历法有关的殷墟卜骨分析，SCP-CN-1559的最早观测记录可能上溯至晚商。根据文献推定，项目可能为生物、机械装置或神性实体，可以被肉眼观察到；其形态接近于鸟类，具有两个肉眼可分辨的翼，发射或反射青白色调的光。项目可能在立春到立夏的傍晚期间偶发性地于天空中飞行，其活跃地区范围大致相当于今日的湖南、湖北两省的部分地区（即先秦时代的楚地）。在晚于这一年代的文献中，有关SCP-CN-1559的直接目击记录不再出现，但作为中国神话中西王母信使的“青鸟”形象此后开始出现于民间传说中。然而，与SCP-CN-1559对应的实体的本质依然是未知的；基金会也从未直接获得过SCP-CN-1559的影像资料。

根据异学会的记录，SCP-CN-1559的早期形象可能是类似于中国古代传说中“祥瑞”的存在，被认为向人间传达来自神（在绝大多数神话中为西王母）的信息；在秦代之后，由于失去了直接的目击记录，青鸟的形象中与天文学有关的属性被逐渐削弱，而“信使”的属性则得到突出，这一点在秦代之后的文学作品中有所体现。如李商隐《无题》1。

基金会关于SCP-CN-1559的记述继承自异学会的档案 异学九十九（见附录CN-1559-A）。值得注意的是在SCP-CN-1559活跃期间，中国文化体系中与天空、宇宙相关的神话、概念和文学作品开始迅速地扩充和丰富。目前认为SCP-CN-1559的出现可能对于古代中国文明的宇宙观形成起到了重要作用。一个目前比较可靠的推论是，SCP-CN-1559的出现极大地加深了中华文明作为一个整体对于宇宙的关注程度。这一时期有关于天空、宇宙和各类相关神灵的传说日臻成熟，大量已知的、有关宇宙的概念也在SCP-CN-1559出现期间及出现之后显现，包括牛郎-织女神话2、二十八星宿3的概念等。这一时期也出现了较多相关的文学作品，如《天问》4。

一种基于异学会记录的猜想认为SCP-CN-1559的出现吸引了这一地区居民的注意力，使他们对SCP-CN-1559的本质进行思考，进而推广到对于宇宙的思考，从而衍生出各类有关的概念与传说。在SCP-CN-1559出现期间，楚地居民观察星空的时间远远长于没有SCP-CN-1559出现时，因此这种对于星空的观察可能激励了楚地神话传说的出现。考虑到楚文化对后续汉文化的发展产生的巨大作用，SCP-CN-1559产生的作用甚至可能深远地影响了中华文明的发展历程。

附录 CN-1559-A：异学会档案中关于SCP-CN-1559的记述（部分）
异学九十九档案的赞部分在历史上曾经被不断地更新，这些更新主要包含异学会成员及基金会中国分部成员与项目相关的一些联想和思考。由于篇幅所限，这里将不列举档案中增补的“赞”部分，只记述相关描述和最原始版本的“赞”。"
    </string>
    <string name="fig1">https://wx2.sinaimg.cn/large/0067hdZuly1g7szjhsld7j30u01901kz.jpg</string>
    <string name="fig2">https://wx3.sinaimg.cn/large/0067hdZugy1g7ssvg877pj30j60j675i.jpg</string>
    <string name="fig3">https://wx3.sinaimg.cn/large/0067hdZugy1g7ss38x252j30yi0yitau.jpg</string>
    <string name="fig4">https://wx1.sinaimg.cn/large/0067hdZuly1g71vmsi9jqj30uv0u0tea.jpg</string>
    <string name="fig5">https://wx3.sinaimg.cn/large/0067hdZuly1g71efm9xpgj30u01hegy6.jpg</string>
    <string name="fig6">https://wx2.sinaimg.cn/large/0067hdZuly1g712q8i0r4j30ci0dw40m.jpg</string>
    <string name="fig7">https://wx1.sinaimg.cn/large/0067hdZuly1g70q2kew9fj30u01hctfy.jpg</string>
    <string name="fit8">https://wx3.sinaimg.cn/large/0067hdZuly1g709vq7b44g30rs0zu4qp.gif</string>
    <string name="fig9">https://wx1.sinaimg.cn/large/0067hdZuly1g70036dk5cj30u01hete1.jpg</string>
    <string name="fit10">https://wx2.sinaimg.cn/large/0067hdZuly1g6zzujshm3j30u01hcgxf.jpg</string>
    <string name="hug_content">心理学认为，从背后主动拥抱对方代表一种保护，表示拥抱者愿意主动给予被拥抱者爱与关怀。所以采用这种姿势，就代表这个人愿意给你爱的承诺，这个人也会从这种主动呵护和疼爱中感到幸福。</string>
    <string name="seli_content">塞里格曼效应是指人或动物接连不断地受到挫折，便会感到自己对于一切都无能为力，丧失信心，陷入一种无助的心理状态。因塞里格曼效应而产生的绝望、抑郁和意志消沉，是许多心理和行为问题产生的根源。所以要想让自己远离绝望，我们必须学会客观理性地为我们的成功和失败找到正确的归因。 
</string>
    <string name="toubal_content">服用头孢药物后喝酒可出现双硫仑样反应。从而引起心率快、血压低等表现，重者可致呼吸抑制、心肌梗死、急性心衰、惊厥及死亡。酒精，化学名称为乙醇，进入体内后，先在肝脏内经乙醇脱氢酶作用转化为乙醛，而头孢类抗菌素分子中含有的甲基硫代四唑基团（MTT），可抑制乙醛脱氢酶活性，使成乙醛无法降解，造成乙醛中毒现象，就是所谓的双硫仑样反应。 </string>
    <string name="chanbu_content">这个成语很容易让人误解，从字面上来看，蝉，夏生秋死，看不到雪是正常的。而这个成语却是讽刺人难以衡量现状，不懂得变通。比如，你到了一个陌生的地方，好心人提醒你要走大道，别走山路，可你偏要走山路；等到真正上路后才发现，山路确实不好走。这个时候，旁边也许就会有人说你“蝉不知雪”了。所以，“蝉不知雪”这个成语形容的是不懂得衡量状况是见识浅薄的意思。 </string>
    <string name="sanmiao_content">是指在搭讪时不能犹豫，必须要在三秒内做出行动，哪怕你只是上前去打一声招呼，说一句我想认识你，都比犹豫不前要好。犹豫的时间越长，越可能产生接近焦虑，搭讪的成功率就越低。 </string>
    <string name="cola_content">可乐被冠上了“肥仔快乐水”的称号，不管你是百事可乐党还是可口可乐党，除了享受可乐滑过喉咙的快感，可能并不知道它别的用处吧？ 1. 印度的一些农民把可乐当“杀虫剂”，原理据说是利用可乐中的糖分吸引红蚂蚁来消灭害虫。 2. 可乐可以用来去除黏在头发上的口香糖。 3. 可乐可以去除厨房的污垢。 4. 可乐可以去除衣服上的汽油味儿。 5. 可乐可以给硬币除锈。 6. 可乐可以给马桶除垢。</string>
    <string name="HCL_content">洁厕液一般是稀盐酸 HCl ，84的主要成分是次氯酸钠 NaClO，两者混合会产生氯气，剧毒！至于量的问题，根据实际发生的事件来看，日常清洁卫生间时，如果通风不理想，正常使用的量已足够导致中毒，若没有及时抢救，将会有生命危险，请一定牢记。
</string>
    <string name="famei_content">黄曲霉毒素（AFT）是黄曲霉和寄生曲霉等某些菌株产生的双呋喃环类毒素。其衍生物有约20种，分别命名为 B1、B2、G1、G2、M1、M2 等。其中以 B1 的毒性最大，致癌性最强。1993年，黄曲霉毒素被世界卫生组织（WHO）癌症研究机构划定为一类天然存在的致癌物，是毒性极强的剧毒物质。除了食物外，发霉的筷子也要尽快更换，不要再使用。</string>
    <string name="xigua_content">西瓜味道甘甜多汁，清爽解渴，是盛夏的佳果，那怎么挑选好西瓜呢？先看西瓜底部的圈圈，越小越好，相反的，底部圈圈越大，皮越厚，越难吃；颜色最好挑青绿色，不要雾雾白白的；西瓜头，就是所谓的蒂头，若是直直的一条线，就不要，但若是卷曲圈起来的，就很甜；西瓜纹路整齐就是好瓜。
</string>

    <string name="hug_title">尝试从背后拥抱对方</string>
    <string name="seli_title">塞利格曼效应</string>
    <string name="toubal_title">双硫仑样反应：头孢加酒，说走就走</string>
    <string name="chanbu_title">蝉不知雪</string>
    <string name="sanmiao_title">三秒法则</string>
    <string name="cola_title">可乐的妙用</string>
    <string name="HCL_title">洁厕灵+84=毒药</string>
    <string name="famei_title">发霉的花生和坚果一定不要吃</string>
    <string name="xigua_title">你会挑选西瓜吗？</string>

    <string name="snow_img">https://timgsa.baidu.com/timg?image&amp;quality=80&amp;size=b9999_10000&amp;sec=1590505676113&amp;di=fbdb2e3f998e66548e09a8f703e87bcb&amp;imgtype=0&amp;src=http%3A%2F%2Fimg1.lotour.net%2FInspiration%2F2017%2F0222%2F20170222130602071771309_910.jpg"</string>
    <string name="hug_img">https://ss1.bdstatic.com/70cFuXSh_Q1YnxGkpoWK1HF6hhy/it/u=1478208439,3405415706&amp;fm=26&amp;gp=0.jpg</string>
    <string name="seli_img">https://ss0.bdstatic.com/70cFuHSh_Q1YnxGkpoWK1HF6hhy/it/u=722543712,3924671090&amp;fm=26&amp;gp=0.jpg</string>
    <string name="toubal_img">https://ss3.bdstatic.com/70cFv8Sh_Q1YnxGkpoWK1HF6hhy/it/u=3963314208,2837283769&amp;fm=26&amp;gp=0.jpg</string>
    <string name="sanmiao_img">https://ss2.bdstatic.com/70cFvnSh_Q1YnxGkpoWK1HF6hhy/it/u=1251167805,2157399383&amp;fm=26&amp;gp=0.jpg</string>
    <string name="cola_img">https://ss0.bdstatic.com/70cFvHSh_Q1YnxGkpoWK1HF6hhy/it/u=1477944623,891818149&amp;fm=26&amp;gp=0.jpg</string>
    <string name="HCL_img">https://timgsa.baidu.com/timg?image&amp;quality=80&amp;size=b9999_10000&amp;sec=1590505919584&amp;di=b7542b3d07bf143daae8928c7c8b2d55&amp;imgtype=0&amp;src=http%3A%2F%2Fimg1.cache.netease.com%2Fcatchpic%2FB%2FBA%2FBA6A21DC75FB6DC003C2505EF3DFBFE2.jpg</string>
    <string name="famei_img">https://5b0988e595225.cdn.sohucs.com/images/20181227/ceb2bf91923142208a1e69f92a6f740a.jpeg</string>
    <string name="xigua_img">https://n.sinaimg.cn/sinacn11/533/w800h533/20180731/4c09-hhacrce1167436.jpg</string>
    <string name="send_phone">发送验证码</string>
    <string name="personalRecommend">个性推荐</string>
</resources>
