<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/read"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_weight="1"
        android:background="?android:attr/selectableItemBackground"
        android:drawableTop="@drawable/ic_like"
        android:text="@string/realLike"
        android:textColor="#737373" />

    <Button
        android:id="@+id/like"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_gravity="bottom"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:drawableTop="@drawable/ic_like_black_24dp"
        android:background="?android:attr/selectableItemBackground"
        android:text="@string/like"
        android:textColor="#737373"/>

    <Button
        android:id="@+id/comment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_weight="1"
        android:background="?android:attr/selectableItemBackground"
        android:drawableTop="@drawable/ic_comment_black_24dp"
        android:text="@string/comment"
        android:textColor="#737373" />

    <Button
        android:id="@+id/search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_weight="1"
        android:background="?android:attr/selectableItemBackground"
        android:drawableTop="@drawable/ic_share"
        android:text="@string/share"
        android:textColor="#737373" />

</LinearLayout>