<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/iv_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        android:src="@drawable/mainpage_background" />
    <Button
        android:id="@+id/home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:background="@android:color/transparent"
        android:drawableBottom="@drawable/ic_home_black_24dp"
        android:gravity="left"
        android:textColor="#737373" />

    <LinearLayout
        android:id="@+id/linear_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="683px">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp">


            <ImageView
                android:id="@+id/iv_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_centerVertical="true"
                app:srcCompat="@drawable/ic_phone_black_24dp" />

            <EditText
                android:id="@+id/et_phone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_toRightOf="@id/iv_phone"
                android:background="@null"
                android:cursorVisible="false"
                android:inputType="none"
                android:hint="@string/hint_phone"
                android:textColor="#000"
                android:textColorHint="#717070"
                android:textSize="15dp"/>

            <Button
                android:id="@+id/send_phone_number"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:text="@string/send_phone"
                android:textSize="15dp" />


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp">

            <ImageView
                android:id="@+id/iv_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                app:srcCompat="@drawable/ic_code_black_24dp" />

            <EditText
                android:id="@+id/et_code"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_toRightOf="@id/iv_code"
                android:background="@null"
                android:cursorVisible="false"
                android:hint="@string/hint_code"
                android:textColor="#000"
                android:textColorHint="#717070"
                android:textSize="15dp" />


        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp">

            <ImageView
                android:id="@+id/iv_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                app:srcCompat="@drawable/ic_user_black_24dp" />

            <EditText
                android:id="@+id/et_user"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_toRightOf="@id/iv_user"
                android:background="@null"
                android:cursorVisible="false"
                android:hint="@string/hint_user"
                android:textColor="#000"
                android:textColorHint="#717070"
                android:textSize="15dp" />


        </RelativeLayout>


        <View
            android:id="@+id/viewDivider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="#c1bcbc" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp">


            <ImageView
                android:id="@+id/iv_paw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_centerVertical="true"
                app:srcCompat="@drawable/ic_password_black_24dp" />

            <EditText
                android:id="@+id/et_paw"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_toRightOf="@id/iv_paw"
                android:background="@null"
                android:cursorVisible="false"
                android:inputType="none"
                android:hint="@string/hint_paw"
                android:textColor="#000"
                android:textColorHint="#717070"
                android:textSize="15dp"/>


        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="#c1bcbc" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <Button
                android:id="@+id/btn_register"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:background="@drawable/roundedrec"
                android:text="@string/myregister"
                android:textSize="14dp"
                android:textColor="#000000" />


        </LinearLayout>

    </LinearLayout>
</FrameLayout>
